src/App.css
@import "./fonts.css";

:root {
  --accent-color: #00cdbd;
  --light-gray: #f3f5f5;
  --gray: #d3d3d3;
  --orange: #ff8000;
  --dark-gray: #808484;
  --black: #2e3333;
  --invalid-color: #bac3c3;
}

body {
  background-color: var(--light-gray);
  font-family: "IBM Plex Sans", sans-serif;
}

.container {
  width: min(100% - 2rem, 1240px);
  margin: 0 auto;
}

h1 {
  font-size: clamp(1.5rem, 1.618vw + 1.121rem, 2.375rem);
}
h2 {
  font-size: 1.5rem;
  font-weight: bold;
  color: var(--black);
}

h3 {
  font-size: 1.125rem;
  color: var(--black);
}

p {
  font-size: 1rem;
  color: var(--dark-gray);
}

.price {
  font-size: 1.125rem;
  color: var(--dark-gray);
}

.hero,
article {
  background-color: #fff;
}

button {
  padding: 1.1em 0.7em;
}

/* ================================================================ */
/* ============================ HEADER ============================== */
/* ================================================================ */

header {
  display: flex;
  align-items: center;
  height: 65px;
  font-weight: bold;
  font-size: 1.5rem;
  border-block-end: 1px solid var(--bg-gray);

  a {
    display: flex;
    align-items: center;
    gap: 10px;
  }

  img {
    display: inline-block;
    width: 40px;
  }

  span {
    margin-block-start: 10px;
    color: var(--accent-color);
  }
}

/* ================================================================ */
/* ============================ MAIN ============================== */
/* ================================================================ */

main {
  min-height: calc(100vh - (65px + 78px));
}

.hero {
  img {
    width: 100%;
    height: 200px;
    object-fit: cover;
  }

  .wrapper {
    padding: 30px;
  }

  h1 {
    margin-block: 10px 40px;
  }

  p {
    line-height: 1.5;
  }
}

h2 {
  margin-block: 40px 24px;
}

article {
  display: flex;
  justify-content: space-between;
  gap: 16px;
  padding: 16px;
  min-height: 160px;
  border-radius: 5px;
  margin-block: 24px;

  img {
    border-radius: 5px;
    width: 130px;
    aspect-ratio: 1/1;
    object-fit: cover;
  }

  .col-1 {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
  }

  h3 {
    margin-block-end: 8px;
  }

  p {
    line-height: 1.25;
    margin-block-end: 16px;
  }

  .rating {
    display: inline-flex;
    align-items: center;
    margin-inline-start: 16px;
    font-size: 0.75rem;
    font-weight: bold;
    color: var(--orange);

    i {
      margin-inline-end: 5px;
      font-size: 18px;
    }
  }
}

section:nth-last-child(2):not(.hero) {
  margin-block-end: 76px;
}

/* ================================================================ */
/* ======================= SHOPPING CART ========================== */
/* ================================================================ */

.shopping-cart {
  position: fixed;
  inset-inline: 0;
  bottom: 0;
  padding: 12px 16px;
  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.05);
  background-color: #fff;

  button {
    width: 100%;
    border-radius: 5px;
    background-color: var(--gray);
    color: white;
    font-weight: bold;
  }
}

/* ================================================================ */
/* ========================= MEDIA QUERIES ==================== */
/* ================================================================ */

@media (min-width: 768px) {
  .content {
    display: flex;
    justify-content: space-between;
    gap: 24px;
  }

  .content {
    padding-inline: 8px;
    margin-block-start: 30px;
  }

  .shopping-cart {
    position: sticky;
    top: 30px;
    height: min-content;
    flex: 1 0 350px;

    text-align: center;
    border-radius: 5px;
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);

    button {
      background-color: var(--invalid-color);
      color: var(--dark-gray);
    }

    p {
      padding-block: 50px;
    }
  }

  .categories section:first-child h2 {
    margin-block-start: 0;
  }
}

@media (min-width: 885px) {
  .hero .container {
    display: flex;
    flex-direction: row-reverse;
    padding: 30px 16px;

    .wrapper {
      padding: 0;
      margin-inline-end: 30px;
    }

    p {
      font-size: 1.25rem;
    }

    img {
      width: 350px;
      height: 100%;
      border-radius: 5px;
    }
  }
}

@media (min-width: 1124px) {
  .categories {
    flex: 0 1 auto;
  }
  .menu {
    display: flex;
    flex-wrap: wrap;
    column-gap: 24px;

    article {
      width: calc(50% - 24px);
      margin-block: 0 24px;
    }
  }
}

